<resources>
    <string name="app_name">MyExamApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">日本語能力試験の漢字テスト</string>
    <string name="paragraph">言語知識(漢字)</string>
    <string name="paragraph2">(2ふん)</string>
    <string name="paragraph3">質問数 : 10</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="exam_btn">Take a Exam</string>
    <string name="User_id">UserID</string>
    <string name="Your_name">Name</string>
    <string name="login_prompt">Login to set customizations!</string>
    <string name="login_btn">Login</string>
    <string name="Take_exam">Start</string>
    <string name="submit_button">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_scored">Exam Result</string>
    <string name="home">Home</string>
    <string name="timer_format">Timer Limited: %d</string>
    <string name="score_format">Current Score: %d</string>
    <string name="finish_exam">Finish Exam</string>
    <string name="preference_fact_type_key">fact_type_pref</string>

    <string name="fact_type_android">Android</string>
    <string name="fact_type_california">California</string>
    <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
</resources>